--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="site-footer">
-<a href="mailto:{{ site.email }}">{{ site.email }}</a>
-<a href="https://github.com/{{ site.github_username }}">{{ site.github_username }}</a>
+<a href="mailto:{{ site.email }}">Email</a>
+<a href="https://github.com/{{ site.github_username }}">GitHub</a>
 </footer>
