Added img, style fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 
 <header class="site-header">
 <a href="{{ site.baseurl }}/">Home</a>
-<a href="{{ site.baseurl }}/about">About</a>
+<a class="right" href="{{ site.baseurl }}/about">About</a>
 </header>
