--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,18 @@
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="{{ '/assets/css/styles.css' | relative_url }}">
-</head>
-<body> 
-{% include header.html %}
+	<head>
+		<title>{% if page.title && site.title %}{{ page.title }} - {{site.title}}{% else %}{{}}{% endif %}</title>
+		<link rel="stylesheet" type="text/css" href="{{ '/assets/css/styles.css' | relative_url }}">
+	</head>
+	<body>
+		<div class="content"> 
+			{% include header.html %}
+	       			<h1>{{ page.title }}</h1>
+          			<h2>{{ page.description}}</h2>
+				<section id="main_content">
+          				{{ content }}
+				</section>
 
-          <h1>{{ page.title }}</h1>
-          <h2>{{ page.description}}</h2>
-
- <section id="main_content">
-          {{ content }}
-</section>
- {% include footer.html %}
-</body>
+ 			{% include footer.html %}
+		</div>
+	</body>
 </html>
