AdAdded viewport, 2018-01-05 post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="site-footer">
 <a href="mailto:{{ site.email }}">Email me</a>
-<a class="right" href="https://github.com/{{ site.github_username }}">GitHub</a>
+<a class="right" target="_blank" href="https://github.com/{{ site.github_username }}">GitHub</a>
 </footer>
