Added comments, css updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="site-footer">
-<a href="mailto:{{ site.email }}">Email me</a>
-<a class="right" target="_blank" href="https://github.com/{{ site.github_username }}">GitHub</a>
+<button onclick="location.href='mailto:{{ site.email }}'" class="footer">Email me</button>
+<button onclick="window.open('https://github.com/{{ site.github_username }}')" class="footer right">GitHub</a>
 </footer>
