--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 
 <header class="site-header">
-<a href="{{ site.baseurl }}/">Home</a>
-<a class="right" href="{{ site.baseurl }}/about">About</a>
+<button onclick="location.href='{{ site.baseurl }}/'" class = "header">Home</button>
+<button onclick="location.href='{{ site.baseurl }}/about'" class = "header right">About</button>
 </header>
