Added og:image meta property, ico

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<link rel="icon" href="{{ site.url }}/favicon.ico" />
  		<meta charset="utf-8">
 		<meta name="robots" content="all">
  		<meta name="googlebot" content="all">
@@ -9,6 +10,7 @@
 		<meta content="{{page.title}}" property="og:title">
 		<meta content="{{site.title}}" property="og:site_name">
 		<meta content="{{page.description}}" property="og:description">
+		<meta content="{{ site.url }}/favicon.ico" property="og:image"  />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="{{ '/assets/css/styles.css' | relative_url }}">
 	</head>
