--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<html>
+<html prefix="og: http://ogp.me/ns#">
 	<head>
 		<link rel="icon" href="{{ site.url }}/favicon.ico" />
  		<meta charset="utf-8">
