--- a/_layouts/404-noindex.html
+++ b/_layouts/404-noindex.html
@@ -2,6 +2,7 @@
 	<head>
  		<meta charset="utf-8">
 		<meta name="robots" content="noindex, follow">
+		<meta name="googlebot" content="noindex, follow">
 		<title>{% if page.title and site.title %}{{ page.title }} - {{site.title}}{% else %}  {% endif %}</title>
 		<meta name="description" content="{{page.description}}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
