--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -2,9 +2,11 @@
 	<head>
 		<link rel="icon" href="{{ site.url }}/favicon.ico" />
  		<meta charset="utf-8">
-		<meta name="robots" content="all">
- 		<meta name="googlebot" content="all">
+		<meta name="robots" content="index, follow">
+ 		<meta name="googlebot" content="index, follow">
 		<title>{% if page.title and site.title %}{{ page.title }} - {{site.title}}{% else %}  {% endif %}</title>
+		<meta name="description" content="{{page.description}}"/>
+		<link rel="canonical" href="{{ site.url }}{{page.url}}">
 		<meta content="article" property="og:type" />
 		<meta content="{{ site.url }}{{page.url}}" property="og:url">
 		<meta content="{{page.title}}" property="og:title">
