--- a/_layouts/404-noindex.html
+++ b/_layouts/404-noindex.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="{{page.description}}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="{{ '/assets/css/styles.css' | relative_url }}">
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	</head>
 	<body>
 		<div class="content"> 
