--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -15,6 +15,7 @@
 		<meta content="{{ site.url }}/favicon.ico" property="og:image"  />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="{{ '/assets/css/styles.css' | relative_url }}">
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	</head>
 	<body>
 		<div class="content"> 
