Changed styling to Bootstrap

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer class="site-footer">
-<button onclick="location.href='mailto:{{ site.email }}'" class="footer">Email me</button>
-<button onclick="window.open('https://github.com/{{ site.github_username }}')" class="footer right">GitHub</a>
+  <div class=" bg-dark">
+<p class="text-white" style="text-align:center; margin-bottom:0rem">Copyright 2018-2020, @sashabrava. Powered by <a class="text-white" href="https://pages.github.com/">GitHub Pages</a> </p>
+</div>
 </footer>
