--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,35 @@
-<header class="site-header">
+<nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
+  <a class="navbar-brand flex-shrink-0" href="/">
+    <img src="/assets/css/logo.png" width="40" height="40" class="d-inline-block align-top" alt="">
+    </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#rightNavBar" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="navbar-collapse collapse justify-content-start">
+    <ul class="navbar-nav ">
+      <li class="nav-item active align-items-center">
+        <a class="nav-link" href="/">Home</a>
+    </li>
+  </ul>
+  </div>
+  <div class="navbar-collapse collapse justify-content-center w-100">
+      <p class="navbar-text mb-0">Blog about various IT stuff</p>
+  </div>
+  <div class="navbar-collapse collapse justify-content-end" id="rightNavBar">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="mailto:{{ site.email }}">Email</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://github.com/{{ site.github_username }}">Github</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<!--header class="site-header">
 <button onclick="location.href='{{ site.baseurl }}/'" class = "header">Home</button>
 <button onclick="location.href='{{ site.baseurl }}/about'" class = "header right">About</button>
-</header>
+</header-->
