--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,6 +77,7 @@ border-radius: 5px;
 white-space: pre-wrap;
 display: inline-block;
 vertical-align: bottom;
+color: #111388;
 }
 
 /*  fixing multiline code for github pages */
